<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_stanje"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <TextView
        style="@style/HeaderFontStyle"
        android:gravity="center"
        android:id="@+id/pregled_brojnog_stanjaTv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/menu_stanje_header" />

    <GridLayout
        android:id="@+id/gridLayout"
        app:layout_constraintTop_toBottomOf="@id/pregled_brojnog_stanjaTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:columnCount="2"
        android:rowCount="1"
        android:layout_marginTop="250dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp">
        <TextView
            style="@style/BasicFontStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_stanje_cekaonica"/>

        <TextView
            style="@style/BasicFontStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/menu_stanje_hospitalizovani"/>
        <TextView
            style="@style/BasicFontStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/menu_stanje_otpusteni"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="110dp"
            android:layout_marginEnd="20dp">
        <TextView
            android:id="@+id/pacijenti_cekaonicaTv"
            android:textColor="@color/waiting"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/pacijenti_hospitalizovaniTv"
            android:textColor="@color/hospitalized"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/list_size_default"/>

        <TextView
            android:id="@+id/pacijenti_otpusteniTv"
            android:textColor="@color/released"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/list_size_default"/>
        </LinearLayout>
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>